# FlowerEvolver-WASM

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE.md  README.md  index.html  index.js  package.json
.devops/: deploy.sh  dist.sh  publish.sh
.github/workflows/: cd.yml  pkg.yml
blender/: README.md  import_gltf_flower_lights(FlowerEvolver).py
cmake/modules/: FindJsonBox.cmake
include/: 3D.hpp  DNA.hpp  Flower.hpp  FlowerEvolver.hpp  Image.hpp  MathUtils.hpp  Petals.hpp  Stats.hpp
include/3D/: FlowerParameters.hpp  GLTF.hpp  Resources.hpp  Vec.hpp  Vec.inl  contourFinder.hpp  contourSimplifier.hpp  meshGenerator.hpp  utils.hpp
include/3D/GLTF/: JsonWriter.hpp  Material.hpp  Mesh.hpp  Node.hpp  Scene.hpp  TextureInfo.hpp  Vertex.hpp
include/SFML/Graphics/: Color.hpp
public/: FlowerEvolver.js  FlowerEvolver.wasm
src/: DNA.cpp  Flower.cpp  FlowerEvolver.cpp  Image.cpp  MathUtils.cpp  Petals.cpp  Stats.cpp
src/3D/: FlowerParameters.cpp  contourFinder.cpp  contourSimplifier.cpp  meshGenerator.cpp  utils.cpp
src/3D/GLTF/: JsonWriter.cpp  Material.cpp  Mesh.cpp  Node.cpp  Scene.cpp  TextureInfo.cpp  Vertex.cpp
